--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,9 @@ spring:
   application:
     name: recipes
   profiles:
-    active: prod
+    active: local
+  flyway:
+    enabled: false
 
 server:
   port: 8080
