--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -8,6 +8,15 @@ spring:
   datasource:
     driverClassName: org.h2.Driver
     url: jdbc:h2:mem:test
+  h2:
+    console:
+      enabled: true
+
+logging:
+  level:
+    org:
+      hibernate:
+        type: trace
 
 server:
   port: 8080
