--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,17 +1,21 @@
 spring:
   datasource:
-    url: jdbc:postgresql://postgres:5432/recipes
+    url: jdbc:postgresql://postgres:5432/recipes?currentSchema=recipes
     username: user
     password: geronimo
     driver-class-name: org.postgresql.Driver
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    hibernate:
-      ddl-auto: validate
     properties:
       hibernate:
+        default_schema: recipes
         show_sql: true
+        use_sql_comments: true
         format_sql: true
+        generate_statistics: false
+        jdbc:
+          fetch_size: 2000
+          lob.non_contextual_creation: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
   flyway:
     enabled: true
     schemas: recipes
